Fix instagram-big block (h-alignment)

--- a/app/blocks/instagram-big/instagram-big.styl
+++ b/app/blocks/instagram-big/instagram-big.styl
@@ -24,13 +24,22 @@
 		background-color #b2ae7e
 		border-radius 50%
 		size 19px
+	&__photos-wrapper
+		overflow hidden
+		@media(min-width 980px)
+			position relative
+			height 600px
 	&__photos
 		display flex
-		overflow hidden
 		flex-direction column
 		width 100%
 		height 600px
 		flex-wrap wrap
+		@media(min-width 980px)
+			position absolute
+			left 50%
+			margin-left -50% // @stylint ignore
+			margin-left -50vw
 	&__photo-container
 		display block
 		&_rect
